@@ -99,6 +99,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Markus Schaney                       markus@riseup.net
     Martin Guerrero Roncel               mar@iaa.es
     Martin Kuemmel                       mkuemmel@usm.lmu.de
+    Mathias Urbano                       mathias.urbano@astro.unistra.fr
     Michael H.F. Wilkinson               m.h.f.wilkinson@gmail.com
     Michael Stein                        mstein@astro.rub.de
     Michel Tallon                        mtallon@obs.univ-lyon1.fr
