@@ -6,7 +6,9 @@ Greg Wooledge
 Hamed Altafi
 Jesús Vega
 Juan Castillo Ramírez
+Mathias Urbano
 Ooldooz Kabood
+Paola Dimauro
 Phil Wyett
 Rahna Payyasseri Thanduparackal
 Raul Infante-Sainz
